[project]
name = "quantumfetcher"
version = "1.0.2"
description = ""
authors = [
    {name = "Marek Grzyb",email = "marek@grzyb.dev"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.20.0,<0.21.0)",
    "requests (>=2.32.5,<3.0.0)",
    "inquirer (>=3.4.1,<4.0.0)",
    "humanreadable (>=0.4.1,<0.5.0)"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
quantumfetcher = "quantumfetcher:app"
