[project]
name = "quantumfetcher"
version = "1.0.2"
description = "Tool for fetching Quantum Break live action episodes for offline in-game playback"
authors = [
    {name = "Marek Grzyb",email = "marek@grzyb.dev"}
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = [
    "LICENSE.md",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.21.1",
    "requests>=2.32.5",
    "inquirer>=3.4.1",
    "humanreadable>=0.4.1",
]

[tool.uv]
package = true

[project.scripts]
quantumfetcher = "quantumfetcher:app"
